--- a/website/content/assignment/05-hw2.Rmd
+++ b/website/content/assignment/05-hw2.Rmd
@@ -7,7 +7,7 @@ date: 2024-09-27
 
 ## Due Date
 
-This assignment is due by midnight Pacific Time, October 11th, 2024.
+This assignment is due by 11:59pm Pacific Time, October 11th, 2024.
 
 For this assignment, we will be analyzing data from USC’s Children’s Health Study.
 The learning objectives are to conduct data wrangling and visualize the data with key questions in mind.
