--- a/slides/05-data-wrangling/slides.Rmd
+++ b/slides/05-data-wrangling/slides.Rmd
@@ -5,7 +5,6 @@ author: "George G. Vega Yon and Kelly Streets"
 # output:
   # slidy_presentation:
   #   slide_level: 1
-date: 2021-09-23
 output:
   xaringan::moon_reader:
     css: ["theme.css", "default"]
@@ -268,8 +267,11 @@ For the rest of the session we will be using these variables:
 `USAFID`, `WBAN`, `year`, `month`, `day`, `hour`, `min`, `lat`, `lon`, `elev`, `wind.sp`, `temp`, and `atm.press`.
 
 ```{r actual-selection}
-# Data.table
-dat <- dat |> select(USAFID, WBAN, year, month, day, hour, min, lat, lon, elev, wind.sp, temp, atm.press)
+# select only the relevant variables
+dat <- dat |> 
+  select(USAFID, WBAN, year, month, day, 
+         hour, min, lat, lon, elev, 
+         wind.sp, temp, atm.press)
 ```
 
 ---
