--- a/slides/05-data-wrangling/slides.Rmd
+++ b/slides/05-data-wrangling/slides.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Week 5: Data Wrangling"
 subtitle: "PM 566: Introduction to Health Data Science"
-author: "George G. Vega Yon and Kelly Streets"
+author: "George G. Vega Yon and Kelly Street"
 # output:
   # slidy_presentation:
   #   slide_level: 1
@@ -660,15 +660,16 @@ dat |>
 
 Don't forget about loops! `for` loops and `sapply` may be slow on a dataset of this size, but they can be quite handy for creating variables that rely on complicated relationships between variables. Consider this a "brute force" approach. Vectorized methods will *always* be faster, but these can be easier to conceptualize and, in rare cases, may be the only option.
 
-Let's demonstrate this by creating a weird variable: `wind.temp`. This will take on 4 possible values, based on the temperature and wind speed: cool & still, cool & windy, warm & still, or warm & windy. We will split each variable based on their median value.
+Consider the problem creating a weird variable: `wind.temp`. This will take on 4 possible values, based on the temperature and wind speed: cool & still, cool & windy, warm & still, or warm & windy. We will split each variable based on their median value. Note that this code is too slow to actually run on this large dataset.
 
 ---
 
 ## Complex variable creation (cont 1)
 
-Here's how we would do that with the `sapply` function:
+Here's how we would do that with the `sapply` function (and a custom, unnamed function):
 
-```{r new-var-sapply}
+```{r new-var-sapply, eval=FALSE}
+# create the new variable one entry at a time
 wind.temp <- sapply(1:nrow(dat), function(i){
   if(is.na(dat$temp[i]) | is.na(dat$wind.sp[i])){
     return(NA)
@@ -687,8 +688,8 @@ wind.temp <- sapply(1:nrow(dat), function(i){
     }
   }
 })
-head(wind.temp)
 ```
+
 Check: what would we need to change to add this variable to our dataset?
 
 ---
@@ -700,7 +701,7 @@ Here's the code for doing that with a `for` loop:
 ```{r new-var-for-loop, eval=FALSE}
 # initialize a variable of all missing values
 wind.temp <- rep(NA, nrow(dat))
-# fill in the values
+# fill in the values one at a time
 for(i in 1:nrow(dat)){
   if(is.na(dat$temp[i]) | is.na(dat$wind.sp[i])){
     return(NA)
@@ -723,6 +724,29 @@ for(i in 1:nrow(dat)){
 ```
 
 Check: why do we need to include `na.rm=TRUE` when calculating the medians?
+
+---
+
+## Complex variable creation (cont 3)
+
+Here's a simple vectorized approach that will actually run on a large dataset. This works for our current case, but it's still a brute force approach, because we had to specifically assign every possible value of our new variable. You can imagine that as the number of possible values increases, this code will get increasingly cumbersome. 
+
+```{r new-var-subset}
+# initialize a variable of all missing values
+wind.temp <- rep(NA, nrow(dat))
+# assign every possible value by subsetting
+wind.temp[dat$temp <= median(dat$temp, na.rm=TRUE) & 
+            dat$wind.sp <= median(dat$wind.sp, na.rm=TRUE)] <- 'cool & still'
+wind.temp[dat$temp <= median(dat$temp, na.rm=TRUE) & 
+            dat$wind.sp > median(dat$wind.sp, na.rm=TRUE)] <- 'cool & windy'
+wind.temp[dat$temp > median(dat$temp, na.rm=TRUE) & 
+            dat$wind.sp <= median(dat$wind.sp, na.rm=TRUE)] <- 'warm & still'
+wind.temp[dat$temp > median(dat$temp, na.rm=TRUE) & 
+            dat$wind.sp > median(dat$wind.sp, na.rm=TRUE)] <- 'warm & windy'
+
+head(wind.temp)
+```
+
 
 ---
 
