--- a/schedule.qmd
+++ b/schedule.qmd
@@ -9,7 +9,7 @@ title: "Schedule"
 | 3 | 9/12 | Exploratory data analysis | [Slides](slides/week03.qmd) | [Lab](labs/lab3.qmd) | [HW1](assignments/hw1.qmd) |
 | 4 | 9/19 | Data visualization	 | [Slides](slides/week04.qmd) | [Lab](labs/lab4.qmd) |  |
 | 5 | 9/26 | Data Cleaning and Wrangling	 | [Slides](slides/week05.qmd) | [Lab](labs/lab5.qmd) | HW2 |
-| 6 | 10/3 | Text Mining & Sentiment Analysis	 | [Slides](slides/week06.qmd) | Lab |  |
+| 6 | 10/3 | Text Mining & Sentiment Analysis	 | [Slides](slides/week06.qmd) | [Lab](labs/lab6.qmd) |  |
 |   | 10/10 | NO CLASS - FALL RECESS	 |  |  | Midterm |
 | 7 | 10/17 | Scraping, APIs, and Regular Expressions	 | [Slides](slides/week07.qmd) | Lab |  |
 | 8 | 10/24 | High Performance Computing, Cloud Computing	 | Slides | Lab | HW3 |
